<resources>
    <string name="app_name">Footbaranks</string>

    <string name="options_visit_clubelo">Powered by ClubElo</string>
    <string name="options_about">About</string>

    <string name="teamRanking_club_name">Club</string>
    <string name="teamRanking_country_flag_description">Country flag</string>
    <string name="teamRanking_rating">Rating</string>
    <string name="teamRanking_search_field_hint">Search teams</string>

    <string name="matches_match_item_middle_text">vs.</string>
    <string name="matches_match_item_percetange_text">%</string>
    <string name="matches_league_item_logo">League logo</string>
    <string name="matches_league_item_name">League</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_item_ratings">Rankings</string>
    <string name="drawer_item_matches">Matches</string>

    <string name="downloader_error_internet">Could not connect to internet</string>
    <string name="downloader_error_server">Could not reach server</string>
    <string name="downloader_loading_dialog_title">Loading</string>
    <string name="downloader_loading_dialog_subtitle">Please wait…</string>

    <string name="menu_search">Search</string>
    <string name="toolbar_select_date">Select date</string>
</resources>
