<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <TextView
        android:id="@+id/teamRank"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="20sp"
        android:textColor="@color/teamRankings"/>

    <ImageView
        android:id="@+id/countryFlag"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/teamRanking_country_flag_description"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="2dp"
        android:paddingRight="2dp"/>

    <TextView
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamRanking_club_name"
        android:textSize="20sp"
        android:textColor="@color/teamRankings"/>

    <TextView
        android:id="@+id/matches_match_item_vs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/teamRanking_rating"
        android:textSize="20sp"
        android:textColor="@color/teamRankings"/>
</LinearLayout>