<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/shape_card_border"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/matches_league_item_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/matches_league_item_logo"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/matches_league_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matches_league_item_name"
            android:textSize="24sp"
            android:textColor="@color/teamRankings"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/matches_league_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matches_match_item_middle_text"
            android:textSize="16sp"
            android:textColor="#777"/>
    </LinearLayout>
</LinearLayout>