<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@drawable/shape_card_border"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/matches_match_item_countryFlag1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/teamRanking_country_flag_description"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"/>

        <TextView
            android:id="@+id/matches_match_item_teamName1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/teamRanking_club_name"
            android:textSize="20sp"
            android:textColor="@color/teamRankings"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/matches_match_item_vs"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/matches_match_item_middle_text"
            android:textSize="20sp"
            android:textColor="@color/teamRankings"/>

        <TextView
            android:id="@+id/matches_match_item_teamName2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/teamRanking_club_name"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/teamRankings"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/matches_match_item_countryFlag2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/teamRanking_country_flag_description"
            android:layout_gravity="end"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="2dp"
            android:paddingRight="2dp"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ccc"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/matches_match_item_percent_home"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/matches_match_item_percetange_text"
            android:textSize="16sp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/match_item_percentage"/>

        <TextView
            android:id="@+id/matches_match_item_percent_draw"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/matches_match_item_percetange_text"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/match_item_percentage"/>

        <TextView
            android:id="@+id/matches_match_item_percent_away"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/matches_match_item_percetange_text"
            android:gravity="end"
            android:textSize="16sp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/match_item_percentage"/>
    </LinearLayout>
</LinearLayout>